# cmc-obs

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: observations_parameter_usage.py
src/cmc_obs/: kinematics.py  mocca_observations.py  observations.py
tests/: test_obs.py  test_observations_parameter.py
