[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "cmc_obs"
version = "0.1.0"
description = "Create realistic mock observations from CMC models"
authors = [{ name = "Peter Smith", email = "smith.peter.902@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "astropy",
    "jax",
    "blackjax",
    "gcfit @ git+https://github.com/nmdickson/GCfit.git@develop",
]

[project.urls]
homepage = "https://github.com/pjs902/cmc-obs"