[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "cmc_obs"
version = "0.3.0"
description = "Create realistic mock observations from CMC models"
authors = [{ name = "Peter Smith", email = "smith.peter.902@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "astropy",
    "jax",
    "blackjax",
    "gcfit @ git+https://github.com/nmdickson/GCfit.git@develop",
    "cmctoolkit @ git+https://github.com/pjs902/cmctoolkit.git",
    "cmc-browser @ git+https://github.com/pjs902/cmc-browser.git",
]

[project.urls]
homepage = "https://github.com/pjs902/cmc-obs"
